[metadata]
name = nuclipy
version = 1.0.2
author = Prasant Paudel
author_email = prashant.paudel.555@gmail.com
description = A template based vulnerability scanner (Inspired by Nuclei Scanner)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prasant-paudel/nuclipy
project_urls = 
    Bug Tracker = https://github.com/prasant-paudel/nuclipy/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[Options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src